force-app/main/default/objects/External_Data__c/External_Data__c.object-meta.xml
<CustomObject>
    <label>External Data</label>
    <nameField>
        <displayFormat>EXT-{00000}</displayFormat>
        <label>External Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>