force-app/main/default/objects/External_Data__c/fields/Retrieved_On__c.field-meta.xml
<CustomField>
    <fullName>Retrieved_On__c</fullName>
    <label>Retrieved On</label>
    <type>DateTime</type>
</CustomField>